<resources>
    <string name="app_name"											>Fueller</string>
    <string name="action_settings"									>Settings</string>
    <string name="activity_burreaucratic_header"					>Burreaucracy expense</string>
    <string name="activity_car_add_brand_hint"						>Brand</string>
    <string name="activity_car_add_button_add"						>Add car</string>
    <string name="activity_car_add_button_edit"						>Edit car</string>
    <string name="activity_car_add_button_get_photo"				>Add photo</string>
    <string name="activity_car_add_distance_units_hint"				>Distance units</string>
    <string name="activity_car_add_header"							>Enter the details about your car</string>
    <string name="activity_car_add_label"							>Add a new car</string>
    <string name="activity_car_add_license_plate_hint"				>License plate</string>
    <string name="activity_car_add_model_hint"						>Model</string>
    <string name="activity_car_add_model_year_hint"					>Model Year</string>
    <string name="activity_car_add_nickname_hint"					>Nickname (optional)</string>
    <string name="activity_car_add_volume_units_hint"				>Volume units</string>
    <string name="activity_car_edit_label"							>Edit your car</string>
    <string name="activity_entries_list_type_hint"					>Filter: </string>
    <string name="activity_entry_add_button_burreaucratic"			>Burreaucracy</string>
    <string name="activity_entry_add_button_insurance"				>Insurance payment</string>
    <string name="activity_entry_add_button_maintenance"			>Maintenance</string>
    <string name="activity_entry_add_button_refuel"					>Refuelling</string>
    <string name="activity_entry_add_button_service"				>Service</string>
    <string name="activity_entry_add_button_toll"					>Toll expense</string>
    <string name="activity_entry_add_button_tyres_change"			>Change tyres</string>
    <string name="activity_entry_add_field_missing_alert"			>Some of the required fields are not filled-in:</string>
    <string name="activity_entry_add_header"						>Pick an action to record</string>
    <string name="activity_entry_add_label"							>Adding new event</string>
    <string name="activity_expense_add_currency_hint"				>Currency</string>
    <string name="activity_expense_add_cost_hint"					>Cost</string>
    <string name="activity_expense_add_price_hint"					>Price</string>
    <string name="activity_garage_management_label"					>Your garage</string>
    <string name="activity_garage_management_button_car_add"		>Add a new car</string>
    <string name="activity_garage_management_info_text"				>List of cars in your garage:</string>
    <string name="activity_generic_button_date_change"				>Change date</string>
    <string name="activity_generic_button_entry_save"				>Save</string>
    <string name="activity_generic_comment_hint"					>Additional comment</string>
    <string name="activity_generic_cost_hint"						>Cost of the bill</string>
    <string name="activity_generic_mileage_hint"					>Mileage</string>
    <string name="activity_generic_part_add_condition_hint"			>Condition</string>
    <string name="activity_generic_part_add_quantity_hint"			>Quantity</string>
    <string name="activity_insurance_header"						>Insurance expense</string>
    <string name="activity_insurance_type_hint"						>Insurance type</string>
    <string name="activity_main_average"							>Average</string>
    <string name="activity_main_average_combined"					>Average combined</string>
    <string name="activity_main_button_entry_add"					>Record a new event</string>
    <string name="activity_main_button_stats_view"					>View statistics</string>
    <string name="activity_main_button_garage_enter"				>Enter garage</string>
    <string name="activity_main_car"								>Car</string>
    <string name="activity_main_create_garage_alert"				>You didn\'t setup your garage yet. Prepare one now.</string>
    <string name="activity_main_consumption_combined"				>Combined</string>
    <string name="activity_main_garage_empty"						>Your garage is empty</string>
    <string name="activity_main_header"								>Manage your enthusiasm!</string>
    <string name="activity_main_relative_costs"						>Relative costs</string>
    <string name="activity_main_relative_costs_fuel"				>Relative costs for </string>
    <string name="activity_main_relative_since_last_refuel"			>Relative costs since last refuel</string>
    <string name="activity_main_since_last_refuel"					>Since the last refuel</string>
    <string name="activity_main_total_costs"						>Total costs</string>
    <string name="activity_maintenance_button_add"					>+</string>
    <string name="activity_maintenance_button_delete"				>-</string>
    <string name="activity_maintenance_header"						>Maintenance</string>
    <string name="activity_maintenance_labor_cost_hint"				>Labor cost</string>
    <string name="activity_maintenance_parts_cost_hint"				>Parts cost: </string>
    <string name="activity_maintenance_total_cost_hint"				>Total cost: </string>
    <string name="activity_maintenance_type_accident_repair_label"	>Accident repair</string>
    <string name="activity_maintenance_type_hint"					>Maintenance type</string>
    <string name="activity_maintenance_type_planned_label"			>Planned</string>
    <string name="activity_maintenance_type_unplanned_label"		>Unlanned</string>
    <string name="activity_part_add_carmaker_part_id_hint"			>Carmaker part No.</string>
    <string name="activity_part_add_manufacturer_part_id_hint"		>Manufacturer part No.</string>
    <string name="activity_part_add_originality_hint"				>Originality</string>
    <string name="activity_part_add_producer_hint"					>Manufacturer</string>
    <string name="activity_refuel_fuel_type_hint"					>Fuel type</string>
    <string name="activity_refuel_header"							>Enter your bill details</string>
    <string name="activity_refuel_price_hint"						>Price per liter</string>
    <string name="activity_refuel_volume_hint"						>Fuel volume bought</string>
    <string name="activity_refuel_volume_unit_hint"					>Volume unit</string>
    <string name="activity_service_header"							>Service</string>
    <string name="activity_service_type_hint"						>Service type</string>
    <string name="activity_stats_show_button_charts"				>Charts</string>
    <string name="activity_stats_show_button_fuelling"				>Recorded entries</string>
    <string name="activity_stats_show_header"						>Statistic center</string>
    <string name="activity_toll_header"								>Toll</string>
    <string name="activity_toll_type_hint"							>Toll category</string>
    <string name="activity_tyre_add_brand_hint"						>Brand</string>
    <string name="activity_tyre_add_button_entry_save"				>Save the record</string>
    <string name="activity_tyre_add_diameter_hint"					>Diameter</string>
    <string name="activity_tyre_add_dot_hint"						>DOT</string>
    <string name="activity_tyre_add_header"							>New tyre</string>
    <string name="activity_tyre_add_height_hint"					>Height</string>
    <string name="activity_tyre_add_model_hint"						>Model</string>
    <string name="activity_tyre_add_season_hint"					>Season</string>
    <string name="activity_tyre_add_speed_index_hint"				>Speed index</string>
    <string name="activity_tyre_add_thread_level_hint"				>Thread level</string>
    <string name="activity_tyre_add_weight_index_hint"				>Weight index</string>
    <string name="activity_tyre_add_width_hint"						>Width</string>
    <string name="activity_tyre_change_button_advanced"				>Advanced</string>
    <string name="activity_tyre_change_button_entry_save"			>Save the record</string>
    <string name="activity_tyre_change_comment_hint"				>Additional comment</string>
    <string name="activity_tyre_change_labor_cost_hint"				>Labor cost</string>
    <string name="activity_tyre_change_small_parts_cost_hint"		>Cost of small parts</string>
    <string name="activity_tyre_change_scheme_button_tyre_add"		>Add</string>
    <string name="activity_tyre_change_scheme_button_tyre_delete"	>Delete</string>
    <string name="activity_tyre_change_scheme_button_tyre_move"		>==&gt;&gt;</string>
    <string name="activity_tyre_change_scheme_brand_model_text"		>Brand, model: </string>
    <string name="activity_tyre_change_scheme_dimensions_text"		>Dimensions: </string>
    <string name="activity_tyre_change_scheme_dot_year_wear_text"	>DOT: </string>
    <string name="activity_tyre_change_scheme_mileage_text"			>Mileage: </string>
    <string name="activity_tyre_change_scheme_pattern_text"			>Tread pattern: </string>
    <string name="activity_tyre_change_total_cost_hint"				>Total cost</string>
    <string name="activity_tyre_change_tyres_cost_hint"				>Cost of tyres (if bought now)</string>
    <string name="fragment_entry_edit_delete_activate_button"		>Activate</string>
    <string name="fragment_entry_edit_delete_activate_toast"		>Activating entry</string>
    <string name="fragment_entry_edit_delete_delete_button"			>Delete</string>
    <string name="fragment_entry_edit_delete_delete_toast"			>Removing entry</string>
    <string name="fragment_entry_edit_delete_edit_button"			>Edit</string>
    <string name="fragment_entry_edit_delete_edit_toast"			>Opening entry</string>
    <string name="list_stats_maintenance_parts_cost_hint"			>Parts cost: </string>
    <string name="list_stats_maintenance_total_cost_hint"			>Total cost: </string>
    <string name="preferences_units"								>Units</string>
    <string name="preferences_units_consumption"					>Consumption</string>
    <string name="preferences_units_consumption_dialog"				>Select consumption units for reporting</string>
    <string name="preferences_units_cost"							>Cost</string>
    <string name="preferences_units_cost_dialog"					>Select cost units for reporting</string>
    <string name="preferences_units_distance"						>Distance</string>
    <string name="preferences_units_distance_dialog"				>Select distance units for reporting</string>
    <string name="preferences_units_summary"						>Distance, volume, consumption</string>
    <string name="preferences_units_title"							>Units in reports</string>
    <string name="preferences_units_volume"							>Volume</string>
    <string name="preferences_units_volume_dialog"					>Select volume units for reporting</string>
    <string-array name="activity_car_add_distance_units">
        <item>Kilometer</item>
        <item>Mile</item>
    </string-array>
    <string-array name="activity_car_add_volume_units">
        <item>Liter</item>
        <item>US Gallon</item>
        <item>Imperial Gallon</item>
    </string-array>
    <string-array name="activity_entries_list_types">
        <item>ALL</item>
        <item>Fuelling</item>
        <item>Maintenance</item>
        <item>Service</item>
        <item>Tyres</item>
        <item>Toll</item>
        <item>Insurance</item>
        <item>Burreaucratic</item>
        <item>Other</item>
    </string-array>
    <string-array name="activity_expense_add_currency">
        <item>€</item>
        <item>$</item>
        <item>£</item>
    </string-array>
    <string-array name="activity_generic_part_add_condition">
        <item>New</item>
        <item>Used</item>
        <item>Refubrished</item>
    </string-array>
    <string-array name="activity_insurance_type">
        <item>Basic (required by law)</item>
        <item>Other</item>
    </string-array>
    <string-array name="activity_part_add_originality">
        <item>OEM</item>
        <item>Aftermaket</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="activity_refuel_fuel_type">
        <item>Gasoline</item>
        <item>LPG</item>
        <item>Diesel</item>
        <item>CNG</item>
        <item>Electricity</item>
    </string-array>
    <string-array name="activity_refuel_volume_unit">
        <item>ltr</item>
        <item>gal (US)</item>
        <item>gal (IMP)</item>
    </string-array>
</resources>