<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/activity_entry_add_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/activity_entry_add_button_refuel"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:drawableLeft="@drawable/gaspump_tiny"
                android:onClick="onClick"
                android:text="@string/activity_entry_add_button_refuel" />

            <Button
                android:id="@+id/activity_entry_add_button_tyres_change"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:onClick="onClick"
                android:text="@string/activity_entry_add_button_tyres_change" />

            <Button
                android:id="@+id/activity_entry_add_button_maintenance"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:onClick="onClick"
                android:text="@string/activity_entry_add_button_maintenance" />

            <Button
                android:id="@+id/activity_entry_add_button_service"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:onClick="onClick"
                android:text="@string/activity_entry_add_button_service" />

            <Button
                android:id="@+id/activity_entry_add_button_toll"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:onClick="onClick"
                android:text="@string/activity_entry_add_button_toll" />

            <Button
                android:id="@+id/activity_entry_add_button_insurance"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:onClick="onClick"
                android:text="@string/activity_entry_add_button_insurance" />

            <Button
                android:id="@+id/activity_entry_add_button_burreaucratic"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:onClick="onClick"
                android:text="@string/activity_entry_add_button_burreaucratic" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/activity_entry_add_header"
        style="@style/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_entry_add_layout_buttons"
        android:text="@string/activity_entry_add_header" />

</RelativeLayout>