<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/activity_tyre_add_header"
            style="@style/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_tyre_add_header" />
        
        <TextView
	        android:id="@+id/activity_tyre_add_date_text"
	        style="@style/EntryText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="true" />
        
        <Button
            android:id="@+id/activity_tyre_add_button_date_change"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_tyre_add_header"
            android:layout_toRightOf="@id/activity_tyre_add_date_text"
            android:background="@drawable/red_button"
            android:onClick="showDatePickerDialog"
            android:text="@string/activity_refuel_button_date_change" />
        
        <EditText 
            android:id="@+id/activity_tyre_add_brand"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_tyre_add_button_date_change"
            android:hint="@string/activity_tyre_add_brand_hint"
            android:inputType="textCapWords"/>
        
        <EditText 
            android:id="@+id/activity_tyre_add_model"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_tyre_add_brand"
            android:hint="@string/activity_tyre_add_model_hint"
            android:inputType="textCapWords"/>
        
        <EditText 
            android:id="@+id/activity_tyre_add_width"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_tyre_add_model"
            android:hint="@string/activity_tyre_add_width_hint"
            android:inputType="number"/>
        
        <TextView
	        android:id="@+id/activity_tyre_add_dimension_slash1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/activity_tyre_add_model"
	        android:layout_toRightOf="@id/activity_tyre_add_width"
	        android:textIsSelectable="false" 
	        android:text="/" />
        
        <EditText 
            android:id="@+id/activity_tyre_add_height"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_tyre_add_model"
            android:layout_toRightOf="@id/activity_tyre_add_dimension_slash1"
            android:hint="@string/activity_tyre_add_height_hint"
            android:inputType="number"/>
        
        <TextView
	        android:id="@+id/activity_tyre_add_dimension_slash2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/activity_tyre_add_model"
	        android:layout_toRightOf="@id/activity_tyre_add_height"
	        android:textIsSelectable="false"
	        android:text="/R" />
        
        <EditText 
            android:id="@+id/activity_tyre_add_diameter"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_tyre_add_model"
            android:layout_toRightOf="@id/activity_tyre_add_diameter"
            android:hint="@string/activity_tyre_add_diameter_hint"
            android:inputType="number"/>
        
        <EditText 
            android:id="@+id/activity_tyre_add_weight_index"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_tyre_add_diameter"
            android:hint="@string/activity_tyre_add_weight_index_hint"
            android:inputType="textCapCharacters"/>
        
        <EditText 
            android:id="@+id/activity_tyre_add_speed_index"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_tyre_add_weight_index"
            android:hint="@string/activity_tyre_add_speed_index_hint"
            android:inputType="number"/>
        
        <EditText 
            android:id="@+id/activity_tyre_add_dot"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_tyre_add_speed_index"
            android:hint="@string/activity_tyre_add_dot_hint"
            android:inputType="textCapCharacters"/>
        
        <Spinner
	        android:id="@+id/activity_tyre_add_season"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/activity_tyre_add_dot"
	        android:entries="@array/activity_tyre_add_season"
	        android:prompt="@string/activity_tyre_add_season_hint" />
        
        <!--  TODO: add threadMin/threadMax infos 
        	+ add input value check into the logic -->
        <EditText 
            android:id="@+id/activity_tyre_add_thread_level"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_tyre_add_season"
            android:hint="@string/activity_tyre_add_thread_level_hint"
            android:inputType="textCapCharacters"/>
        
        <Button
	        android:id="@+id/activity_tyre_add_button_commit"
	        style="@style/button_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/red_button"
	        android:onClick="onClick"
	        android:text="@string/activity_tyre_add_button_entry_save" />
        
    </RelativeLayout>

</ScrollView>