<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue">

    <TextView
        android:id="@+id/activity_stats_show_header"
        style="@style/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_stats_show_header" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

    <Button
        android:id="@+id/activity_stats_show_button_fuelling"
        style="@style/button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:onClick="onClick"
        android:text="@string/activity_stats_show_button_fuelling" />
    
    <Button
        android:id="@+id/activity_stats_show_button_charts"
        style="@style/button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:onClick="onClick"
        android:text="@string/activity_stats_show_button_charts" />
    
    </LinearLayout>
</RelativeLayout>