<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/activity_main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_header" />

    <Button
        android:id="@+id/activity_main_button_entry_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_quick_status"
        android:layout_marginBottom="10dp"
        android:background="@drawable/red_button"
        android:onClick="onClick"
        android:text="@string/activity_main_button_entry_add"
        style="@style/button_text" />

    <Button
        android:id="@+id/activity_main_button_stats_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_button_entry_add"
        android:layout_marginBottom="10dp"
        android:background="@drawable/red_button"
        android:onClick="onClick"
        android:text="@string/activity_main_button_stats_view"
        style="@style/button_text" />

    <Button
        android:id="@+id/activity_main_button_garage_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_button_stats_view"
        android:background="@drawable/red_button"
        android:onClick="onClick"
        android:text="@string/activity_main_button_garage_enter"
        style="@style/button_text" /> />

    <TextView
        android:id="@+id/activity_main_quick_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_header"
        android:layout_marginBottom="10dp"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textIsSelectable="true" />

</RelativeLayout>